# namegen-jax

./: .gitignore  LICENSE  README.md  pyproject.toml  run-jupyter.bat  run-jupyter.sh
data/raw/: uk-towns.csv
namegen/: dataset.py
namegen/modeling/: model.py  predict.py  tokenizer.py  train.py
notebooks/: 3.01-dg-bigrams-model.py
