[project]
name = "namegen_jax"
version = "0.1.0"
description = "Character-level language model for generating names"
authors = [
  { name = "Dmitry Grigoryev" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = ">=3.14"
dependencies = [
	"ipykernel",
	"ipywidgets",
	"jax[cuda13]",
	"matplotlib",
	"numpy",
	"pandas",
	"scikit-learn",
	"tqdm",
]


